--- a/index.html
+++ b/index.html
@@ -2,47 +2,57 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Vacation</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <img src="img/banner.jpg" alt="banner of walley world" />
         <h1>Walley World Vacations</h1>
       </div>
-    </div>
 
     <p class="bg-danger">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia felis ac facilisis egestas. Quisque in aliquet justo, et dapibus quam. Praesent vitae mattis risus, molestie faucibus enim. Nam vitae orci sed nunc pellentesque iaculis. Integer non augue quis massa euismod lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis feugiat nisl enim, hendrerit egestas mauris tincidunt sit amet.
     </p>
 
-    <blockquote>
-      <p>
-        "Had the greatest time!"
-      </p>
-      <footer>Ed</footer>
-    </blockquote>
+    <div class="row">
+      <div class="col-md-3">
+        <blockquote>
+          <p>
+            "Had the greatest time!"
+          </p>
+          <footer>Ed</footer>
+        </blockquote>
+      </div>
 
-    <blockquote>
-      <p>
-        "The food was surprisingly great!"
-      </p>
-      <footer>Martha</footer>
-    </blockquote>
+      <div class="col-md-3">
+        <blockquote>
+          <p>
+            "The food was surprisingly great!"
+          </p>
+          <footer>Martha</footer>
+        </blockquote>
+      </div>
 
-    <blockquote>
-      <p>
-        "The roller coaster kept me screaming the whole ride!"
-      </p>
-      <footer>Jr</footer>
-    </blockquote>
+      <div class="col-md-3">
+        <blockquote>
+          <p>
+            "The roller coaster kept me screaming the whole ride!"
+          </p>
+          <footer>Jr</footer>
+        </blockquote>
+      </div>
 
-    <blockquote>
-      <p>
-        "The clothes are on fleak!"
-      </p>
-      <footer>Lindsey</footer>
-    </blockquote>
+      <div class="col-md-3">
+        <blockquote>
+          <p>
+            "The clothes are on fleak!"
+          </p>
+          <footer>Lindsey</footer>
+        </blockquote>
+      </div>
+    </div>
 
+  </div>
   </body>
 </html>
