Add columns and rows and filled in info for packages page

--- a/packages.html
+++ b/packages.html
@@ -1,70 +1,83 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css" style="text/css">
     <link rel="stylesheet" href="css/style.css">
     <title>Packages</title>
   </head>
 
   <body>
-    <h1>Vacation Packages</h1>
-      <h2>Weekenders</h2>
-        <h3>Moose Package</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Deer Package</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Chipmunk Package</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
+    <div class="container">
+      <h1>Vacation Packages</h1>
+      <div class="row">
+        <div class="col-md-3">
+            <h2>Weekenders</h2>
+              <h3>Moose Package</h3>
+              <h4>$200</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              <h3>Deer Package</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              <h3>Chipmunk Package</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+        </div>
 
-      <h2>Weekers</h2>
-          <h3>Moose Package</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
-          <h3>Deer Package</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
-          <h3>Chipmunk Package</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
+        <div class="col-md-3">
+            <h2>Weekers</h2>
+                <h3>Moose Package</h3>
+                <h4>$500</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                <h3>Deer Package</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+                <h3>Chipmunk Package</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </p>
+        </div>
 
+        <div class="col-md-3">
+          <h2>Monthly Pass</h2>
+            <h3>Moose Pass</h3>
+            <h4>$750</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            <h3>Deer Pass</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            <h3>Chipmunk Pass</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+        </div>
 
-      <h2>Monthly Pass</h2>
-        <h3>Moose Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Deer Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Chipmunk Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-
-
-      <h2>Annual Pass</h2>
-        <h3>Moose Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Deer Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        <h3>Chipmunk Pass</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-
+        <div class="col-md-3">
+          <h2>Annual Pass</h2>
+            <h3>Moose Pass</h3>
+            <h4>$2000</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            <h3>Deer Pass</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            <h3>Chipmunk Pass</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
